# StreamSwitcher

./: .gitignore  README.md  build.bat  build_exe.spec  installer.iss  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
core/: __init__.py  _qt_compat.py  audio_engine.py  audio_router.py  autodj.py  builtin_server.py  channel.py  channel_manager.py  config.py  crossfade.py  dsp.py  history.py  playlist.py  profiles.py  radio_stream.py  recorder.py  remote_api.py  scheduler.py  source_manager.py  streamer.py
docs/: RADIOBOSS_REPLACEMENT_ROADMAP.md
tests/: conftest.py  test_audio_engine.py  test_autodj.py  test_builtin_server.py  test_cli.py  test_config.py  test_crossfade.py  test_dsp.py  test_history.py  test_playlist.py  test_profiles.py  test_radio_stream.py  test_recorder.py  test_remote_api.py  test_scheduler.py  test_scheduler_phase1.py  test_source_manager.py  test_streamer_handshake.py
ui/: channel_widget.py  dsp_panel.py  log_panel.py  main_window.py  radio_panel.py  scheduler_panel.py  stream_panel.py  styles.py  vu_meter.py  waveform_widget.py
